--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
       text-align: center;
       margin-bottom: 0.5rem;
       font-weight: bold;
-      font-size: 1rem;
+      font-size: 1.5rem;
     }
 
     @media (min-width: 600px) {
@@ -119,8 +119,8 @@
   </style>
 </head>
 <body>
-<h1>₹1 Crore Goal Tracker (7-Year Plan)</h1>
-<div class="progress-text">Progress: <span id="progress">0%</span></div>
+<h1>₹1 Crore Goal Tracker <br>(7-Year Plan)</h1>
+<div class="progress-text"><span id="progress">0%</span></div>
 <div class="progress-bar-container">
   <div class="progress-bar" id="progress-bar"></div>
 </div>
